// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should render correctly 1`] = `
<span
  class="rmd-tooltip rmd-tooltip--bottom"
  id="tooltip-1"
  role="tooltip"
>
  This is some content
</span>
`;

exports[`<Tooltip /> should render correctly 2`] = `
<span
  class="rmd-tooltip rmd-tooltip--visible rmd-tooltip--bottom"
  id="tooltip-1"
  role="tooltip"
>
  This is some content
</span>
`;

exports[`<Tooltip /> should render correctly 3`] = `
<span
  class="rmd-tooltip rmd-tooltip--visible rmd-tooltip--dense rmd-tooltip--bottom"
  id="tooltip-1"
  role="tooltip"
>
  This is some content
</span>
`;
